<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#6B88A8"
    tools:context="com.quandoo.challenge.gameoflife.GameOfLifeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@android:color/white"
                android:layout_alignParentLeft="true"
                android:text="@string/generation_label"
                />
            <TextView
                android:id="@+id/txtGenerationCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@android:color/white"
                android:layout_alignParentRight="true"
                android:text="1"/>
        </RelativeLayout>

        <GridView
            android:id="@+id/cellGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnWidth="10dp"
            android:numColumns="20"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:scrollbars="none"
            android:layout_marginTop="5dp"
            ></GridView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageButton
                    android:id="@+id/imgButtonPlay"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_ripple"
                    android:src="@drawable/ic_play_arrow_white_24dp"/>

                <ImageButton
                    android:id="@+id/imgButtonStop"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_ripple"
                    android:visibility="gone"
                    android:src="@drawable/ic_stop_white_24dp"/>

                <ImageButton
                    android:id="@+id/imgButtonClear"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_ripple"
                    android:src="@drawable/ic_clear_white_24dp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
